test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_channel_as_identifier.draco
int channel;
 
proc main() void : a := 1; corp;
